--- a/notes/backend/package.json
+++ b/notes/backend/package.json
@@ -5,30 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "debug": "node --inspect index.js",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf dis && cd ../frontend/ && npm run build && cp -r dist ../backend",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
-    "lint": "eslint --fix --ext .js,.jsx .",
-    "test": "jest --verbose"
+    "lint": "eslint .",
+    "test": "jest --verbose --runInBand"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.4.10",
-    "eslint": "^8.53.0",
-    "jest": "^29.7.0",
-    "nodemon": "^2.0.20"
+    "eslint": "^8.32.0",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalTeardown": "./test-teardown.js"
   }
 }
