--- a/notes/backend/package.json
+++ b/notes/backend/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.8.4"
+    "mongoose": "^8.1.2",
+    "mongoose-unique-validator": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
